fix : 사찰행정의 새로운 기준 클릭시 새 페이지에서 열리도록 수정하다

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <ul>
           <li>
-            <a href="https://blog.naver.com/ioiw/223649129536">
+            <a href="https://blog.naver.com/ioiw/223649129536" target="_blank">
               <span>수비라 기능 미리보기</span>
               <!-- pc -->
               <img
@@ -106,7 +106,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/224012528091">
+            <a href="https://blog.naver.com/ioiw/224012528091" target="_blank">
               <span>포교와 성장을 위한 청사진</span>
               <!-- pc -->
               <img
@@ -121,7 +121,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/224005254231">
+            <a href="https://blog.naver.com/ioiw/224005254231" target="_blank">
               <span>종무소의 사고와 행동 유형</span>
               <!-- pc -->
               <img
@@ -136,7 +136,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793">
+            <a href="https://blog.naver.com/ioiw/223959457793" target="_blank">
               <span>사찰을 위한 선택과 결정</span>
               <!-- pc -->
               <img
@@ -151,7 +151,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793">
+            <a href="https://blog.naver.com/ioiw/223959457793" target="_blank">
               <span>신도관리의 시대 전환</span>
               <!-- pc -->
               <img
@@ -166,7 +166,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793">
+            <a href="https://blog.naver.com/ioiw/223959457793" target="_blank">
               <span>종무원의 상황대응 리더십</span>
               <!-- pc -->
               <img
