fix : 출력물 연등꼬리표 모달 작업 완료하다

--- a/output.html
+++ b/output.html
@@ -160,6 +160,32 @@
               <p>연등 꼬리표 흑색<br />(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>단면 연등꼬리표</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  단면 영가 꼬리표 양식입니다.<br />
+                  한 장을 찍어낸 다음 보실 수 있는 꼬리표로 영가등을 찍을 수
+                  있습니다.<br />
+                  ※ 1박스 : 500매<br />
+                  ※ 사이즈 : 폭 9.6cm x 높이 20.8cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/output-cate1-item3-1.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item3-2.png"
+                    alt="연등꼬리표"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div style="border-radius: 20px; border: 1px solid #ccc">
