fix : 출력물 위패 모달 작업 완료하다

--- a/output.html
+++ b/output.html
@@ -230,6 +230,32 @@
               <p>위패 극락왕생 컬러<br />(단면)</p>
               <p>폭 6cm x 높이 14.4cm</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>위패</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  위패 A4 양식입니다.<br />
+                  한 위패에 영가 네 분까지 모실 수 있습니다. 백중 때 가장 많이
+                  쓰입니다.<br />
+                  ※ 1박스 : 500매(1매에 10위패) 1위패<br />
+                  ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/output-cate2-item1-1.png"
+                    alt="위패"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate2-item1-2.png"
+                    alt="위패"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div style="background-color: #f2f2f2">
@@ -250,9 +276,10 @@
 
                 <p class="modal-content-text">
                   위패 A4 양식입니다.<br />
-                  한 위패에 영가 네 분까지 모실 수 있습니다.<br />
-                  백중 때 가장 많이 쓰입니다.<br />※ 1박스 : 500매(1매에
-                  10위패)<br />※ 1위패 ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                  한 위패에 영가 네 분까지 모실 수 있습니다. 백중 때 가장 많이
+                  쓰입니다.<br />
+                  ※ 1박스 : 500매(1매에 10위패) 1위패<br />
+                  ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
                 </p>
 
                 <div class="img-content">
