fix : 출력물 모달 이미지 교체하다

--- a/output.html
+++ b/output.html
@@ -314,7 +314,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item1.png"
+                    src="./img/output/modal/output-cate3-item1.png"
                     alt="기부금영수증"
                   />
                 </div>
@@ -336,7 +336,10 @@
                 <p class="modal-content-text">축원문 출력물입니다.</p>
 
                 <div class="img-content">
-                  <img src="./img/output/output-cate3-item2.png" alt="축원문" />
+                  <img
+                    src="./img/output/modal/output-cate3-item2.png"
+                    alt="축원문"
+                  />
                 </div>
               </div>
             </dialog>
@@ -356,7 +359,10 @@
                 <p class="modal-content-text">천혼문 출력물입니다.</p>
 
                 <div class="img-content">
-                  <img src="./img/output/output-cate3-item3.png" alt="천혼문" />
+                  <img
+                    src="./img/output/modal/output-cate3-item3.png"
+                    alt="천혼문"
+                  />
                 </div>
               </div>
             </dialog>
@@ -377,7 +383,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item4.png"
+                    src="./img/output/modal/output-cate3-item4.png"
                     alt="축원 + 천혼"
                   />
                 </div>
@@ -400,7 +406,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item5.png"
+                    src="./img/output/modal/output-cate3-item5.png"
                     alt="영가 천혼문"
                   />
                 </div>
@@ -423,7 +429,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item6.png"
+                    src="./img/output/modal/output-cate3-item6.png"
                     alt="제사 위패"
                   />
                 </div>
