fix : index 수비라 출력물 모달 수정하다

--- a/index.html
+++ b/index.html
@@ -225,15 +225,23 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/modal/modal-content-1-1.png"
+                    src="./img/output/modal/output-cate1-item1-1.png"
                     alt="연등꼬리표"
                   />
                   <img
-                    src="./img/output/modal/modal-content-1-2.png"
+                    src="./img/output/modal/output-cate1-item1-2.png"
                     alt="연등꼬리표"
                   />
                   <img
-                    src="./img/output/modal/modal-content-1-3.png"
+                    src="./img/output/modal/output-cate1-item1-3.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item1-4.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item1-5.png"
                     alt="연등꼬리표"
                   />
                 </div>
@@ -254,6 +262,43 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>연등꼬리표</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  연등 양면 꼬리표 양식입니다.<br />
+                  한 장을 찍어낸 다음 접어서 양면으로 보실 수 있는 연등꼬리표로
+                  높은 법당을 갖고 계신 사찰에 유용할 것입니다.<br />
+                  가족등, 개인등을 찍을 수 있습니다.<br />※ 1박스 : 500매<br />※
+                  사이즈 : 폭 19cm x 높이 22.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/output-cate1-item2-1.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item2-2.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item2-3.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item2-4.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item2-5.png"
+                    alt="연등꼬리표"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 연등 꼬리표 흑백 -->
@@ -268,6 +313,31 @@
                     연등 꼬리표 흑백<br />(양면)
                   </p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
+              </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>단면 연등꼬리표</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  단면 영가 꼬리표 양식입니다.<br />
+                  한 장을 찍어낸 다음 보실 수 있는 꼬리표로 영가등을 찍을 수
+                  있습니다.<br />
+                  ※ 1박스 : 500매<br />
+                  ※ 사이즈 : 폭 9.6cm x 높이 20.8cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/output-cate1-item3-1.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate1-item3-2.png"
+                    alt="연등꼬리표"
+                  />
                 </div>
               </div>
             </div>
@@ -303,11 +373,11 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/modal/modal-content-4-1.png"
+                    src="./img/output/modal/output-cate1-item4-1.png"
                     alt="연등꼬리표 비닐"
                   />
                   <img
-                    src="./img/output/modal/modal-content-4-2.png"
+                    src="./img/output/modal/output-cate1-item4-2.png"
                     alt="연등꼬리표 비닐"
                   />
                 </div>
@@ -326,6 +396,31 @@
                     위패 극락왕생 컬러<br />(양면)
                   </p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
+              </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>위패</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  위패 A4 양식입니다.<br />
+                  한 위패에 영가 네 분까지 모실 수 있습니다. 백중 때 가장 많이
+                  쓰입니다.<br />
+                  ※ 1박스 : 500매(1매에 10위패) 1위패<br />
+                  ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/output-cate2-item1-1.png"
+                    alt="위패"
+                  />
+                  <img
+                    src="./img/output/modal/output-cate2-item1-2.png"
+                    alt="위패"
+                  />
                 </div>
               </div>
             </div>
@@ -351,18 +446,19 @@
 
                 <p class="modal-content-text">
                   위패 A4 양식입니다.<br />
-                  한 위패에 영가 네 분까지 모실 수 있습니다.<br />
-                  백중 때 가장 많이 쓰입니다.<br />※ 1박스 : 500매(1매에
-                  10위패)<br />※ 1위패 ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                  한 위패에 영가 네 분까지 모실 수 있습니다. 백중 때 가장 많이
+                  쓰입니다.<br />
+                  ※ 1박스 : 500매(1매에 10위패) 1위패<br />
+                  ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
                 </p>
 
                 <div class="img-content">
                   <img
-                    src="./img/output/modal/modal-content-3-1.png"
+                    src="./img/output/modal/output-cate2-item2-1.png"
                     alt="위패"
                   />
                   <img
-                    src="./img/output/modal/modal-content-3-2.png"
+                    src="./img/output/modal/output-cate2-item2-2.png"
                     alt="위패"
                   />
                 </div>
@@ -391,7 +487,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item1.png"
+                    src="./img/output/modal/output-cate3-item1.png"
                     alt="기부금영수증"
                   />
                 </div>
@@ -416,7 +512,10 @@
                 <p class="modal-content-text">축원문 출력물입니다.</p>
 
                 <div class="img-content">
-                  <img src="./img/output/output-cate3-item2.png" alt="축원문" />
+                  <img
+                    src="./img/output/modal/output-cate3-item2.png"
+                    alt="축원문"
+                  />
                 </div>
               </div>
             </div>
@@ -439,7 +538,10 @@
                 <p class="modal-content-text">천혼문 출력물입니다.</p>
 
                 <div class="img-content">
-                  <img src="./img/output/output-cate3-item3.png" alt="천혼문" />
+                  <img
+                    src="./img/output/modal/output-cate3-item3.png"
+                    alt="천혼문"
+                  />
                 </div>
               </div>
             </div>
@@ -466,7 +568,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item4.png"
+                    src="./img/output/modal/output-cate3-item4.png"
                     alt="축원 + 천혼"
                   />
                 </div>
@@ -495,7 +597,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item5.png"
+                    src="./img/output/modal/output-cate3-item5.png"
                     alt="영가 천혼문"
                   />
                 </div>
@@ -524,7 +626,7 @@
 
                 <div class="img-content">
                   <img
-                    src="./img/output/output-cate3-item6.png"
+                    src="./img/output/modal/output-cate3-item6.png"
                     alt="제사 위패"
                   />
                 </div>
