fix : 출력물 사이즈 수정하다

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <p class="print-cate-text-title">
                     연등 꼬리표 흑백<br />(양면)
                   </p>
-                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                  <p class="print-cate-text-size">폭 9.6cm x 높이 20.8cmm</p>
                 </div>
               </div>
 
@@ -355,7 +355,7 @@
                   <p class="print-cate-text-title">
                     연등 꼬리표<br />비닐 커버
                   </p>
-                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                  <p class="print-cate-text-size">폭 10.5cm x 높이 26cm</p>
                 </div>
               </div>
 
@@ -395,7 +395,7 @@
                   <p class="print-cate-text-title">
                     위패 극락왕생 컬러<br />(양면)
                   </p>
-                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                  <p class="print-cate-text-size">폭 3.6cm x 높이 14.4cm</p>
                 </div>
               </div>
 
@@ -435,7 +435,7 @@
                 />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">위패 극락왕생 흑백</p>
-                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                  <p class="print-cate-text-size">폭 3.6cm x 높이 14.4cm</p>
                 </div>
               </div>
 
