feat: 원격지원 링크 추가하다

--- a/src/footer.html
+++ b/src/footer.html
@@ -213,10 +213,14 @@
     </div>
 
     <!-- 원격 지원 하기 -->
-    <button class="footer-top-item2">
+    <a
+      href="https://113366.com/topscom"
+      target="_blank"
+      class="footer-top-item2"
+    >
       <img src="./img/icon-pc.png" alt="원격 지원 아이콘" />
       <span>원격 지원 시작하기</span>
-    </button>
+    </a>
   </div>
 
   <div class="footer-bottom">
