--- a/main-features.html
+++ b/main-features.html
@@ -129,7 +129,7 @@
       </section>
 
       <section class="benefits-section">
-        <h3 class="title">아래 컨텐츠 아우를 수 있는 소타이틀</h3>
+        <h3 class="title">하나로 잇는 사찰행정</h3>
 
         <ul class="benefits-list">
           <div class="benefit-item">
