feat : index 사찰홈페이지 제작 포트폴리오 이미지 교체하다

--- a/index.html
+++ b/index.html
@@ -650,34 +650,37 @@
 
         <ul>
           <li>
-            <img src="./img/index/portfolio-item1.png" alt="템플스테이 웹진" />
-            <p>템플스테이 웹진</p>
+            <img src="./img/index/portfolio-item1.png" alt="송광사" />
+            <p>송광사</p>
           </li>
           <li>
             <img
               src="./img/index/portfolio-item2.png"
-              alt="의왕 청계사 홈페이지"
+              alt="능인 대학원 대학교"
             />
-            <p>의왕 청계사 홈페이지</p>
-          </li>
-          <li>
-            <img src="./img/index/portfolio-item3.png" alt="모바일 신도증" />
-            <p>모바일 신도증</p>
-          </li>
-          <li>
-            <img src="./img/index/portfolio-item1.png" alt="템플스테이 웹진" />
-            <p>템플스테이 웹진</p>
+            <p>능인 대학원 대학교</p>
           </li>
           <li>
             <img
-              src="./img/index/portfolio-item2.png"
-              alt="의왕 청계사 홈페이지"
+              src="./img/index/portfolio-item3.png"
+              alt="명상상담평생교육원"
             />
-            <p>의왕 청계사 홈페이지</p>
+            <p>명상상담평생교육원</p>
           </li>
           <li>
-            <img src="./img/index/portfolio-item3.png" alt="모바일 신도증" />
-            <p>모바일 신도증</p>
+            <img
+              src="./img/index/portfolio-item4.png"
+              alt="대한불교 조계종 모바일 신도증"
+            />
+            <p>대한불교 조계종 모바일 신도증</p>
+          </li>
+          <li>
+            <img src="./img/index/portfolio-item5.png" alt="도반문자" />
+            <p>도반문자</p>
+          </li>
+          <li>
+            <img src="./img/index/portfolio-item6.png" alt="템플스테이 웹진" />
+            <p>템플스테이 웹진</p>
           </li>
         </ul>
 
