feat : 드래그 문구 추가하다

--- a/compare-now.html
+++ b/compare-now.html
@@ -152,7 +152,9 @@
           <p>
             CS 프로그램(PC 설치형 / 예: 가람xx, 금강xx, 달x 등)과 클라우드(PC
             설치없는 웹접속) 신도관리 프로그램 수비라의 <br class="pc-only" />
-            장단점을 비교한 표입니다.
+            장단점을 비교한 표입니다. <br />
+
+            <span class="mo-only">( * 표를 우측으로 드래그 해주세요. )</span>
           </p>
         </div>
 
