fix : 서브 문구 수정하다

--- a/index.html
+++ b/index.html
@@ -188,9 +188,7 @@
         <h3 class="title">
           수비라 출력물 안내 <a href="./output.html">더보기</a>
         </h3>
-        <p class="sub-title">
-          수비라에서는 접수된 기도의 다양한 출력을 지원합니다.
-        </p>
+        <p class="sub-title">접수된 기도의 다양한 출력을 지원합니다.</p>
 
         <!-- Swiper -->
         <div class="swiper print-swiper">
@@ -310,7 +308,7 @@
                 />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">
-                    연등 꼬리표 흑백<br />(양면)
+                    연등 꼬리표 흑백<br />(단면)
                   </p>
                   <p class="print-cate-text-size">폭 9.6cm x 높이 20.8cmm</p>
                 </div>
@@ -644,9 +642,7 @@
         <h3 class="title">
           사찰 홈페이지 제작 <a href="./portfolio.html">더보기</a>
         </h3>
-        <p class="sub-title">
-          사찰을 잘아는 수비라가 만드는 사찰 홈페이지는 다릅니다.
-        </p>
+        <p class="sub-title">수비라가 만드는 사찰 홈페이지는 다릅니다.</p>
 
         <ul>
           <li>
