--- a/output.html
+++ b/output.html
@@ -157,7 +157,7 @@
           <div style="background-color: #f2f2f2">
             <img src="./img/output/output-cate1-item3.png" alt="연등꼬리표" />
             <div class="label">
-              <p>연등 꼬리표 흑색<br />(양면)</p>
+              <p>연등 꼬리표 흑색<br />(단면)</p>
               <p>폭 9.6cm x 높이 20.8cm</p>
             </div>
             <dialog class="modal">
