style : pc gnb menu  padding 값 수정하다

--- a/src/header.html
+++ b/src/header.html
@@ -84,9 +84,22 @@
     width: 1280px;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     gap: 24px;
+  }
+
+  /* menu depth2 */
+  .gnb-menu .gnb-menu-item:nth-child(1):hover .gnb-sub-menu {
+    padding-left: 653px;
+  }
+  .gnb-menu .gnb-menu-item:nth-child(2):hover .gnb-sub-menu {
+    padding-left: 888px;
+  }
+  .gnb-menu .gnb-menu-item:nth-child(3):hover .gnb-sub-menu {
+    padding-left: 1019px;
+  }
+  .gnb-menu .gnb-menu-item:nth-child(4):hover .gnb-sub-menu {
+    padding-left: 1207px;
   }
   .gnb-modal {
     display: none;
