feat : 단면 문구 추가

--- a/index.html
+++ b/index.html
@@ -432,7 +432,10 @@
                   style="filter: grayscale(100%)"
                 />
                 <div class="print-cate-text">
-                  <p class="print-cate-text-title">위패 극락왕생 흑백</p>
+                  <p class="print-cate-text-title">
+                    위패 극락왕생 흑백 <br />
+                    (단면)
+                  </p>
                   <p class="print-cate-text-size">폭 3.6cm x 높이 14.4cm</p>
                 </div>
               </div>
